profile picture in navbar and fix stretching profile picture

--- a/src/components/Leaderboard/Leaderboard.css
+++ b/src/components/Leaderboard/Leaderboard.css
@@ -66,6 +66,8 @@
   flex-shrink: 0;
   z-index: 0;
   clip-path: path('M30.518 0.371094C38.5885 0.371094 45.9236 3.52017 51.3614 8.65661L51.3613 8.65625C58.1053 15.0244 61.8363 14.6753 65.0203 11.3034L65.0208 11.3059C67.7882 8.37554 71.7098 6.54688 76.0586 6.54688C84.442 6.54688 91.2382 13.343 91.2382 21.7265C91.2382 28.3504 86.9955 33.9834 81.0793 36.0562C75.0301 38.4159 72.1748 42.5345 75.6515 52.1692C76.7478 54.9298 77.3504 57.9401 77.3504 61.0912C77.3504 74.4482 66.5224 85.2762 53.1654 85.2762C41.7769 85.2762 32.2269 77.4045 29.6594 66.8052C28.7444 63.4188 27.9731 62.0293 24.8175 60.7903C15.3224 60.8733 14.9982 68.2945 16.0842 70.7221C16.5769 71.6769 16.8551 72.7605 16.8551 73.909C16.8551 77.7528 13.7391 80.8688 9.89533 80.8688C6.05155 80.8688 2.93555 77.7528 2.93555 73.909C2.93555 70.5594 5.3019 67.7624 8.45409 67.0986C11.2169 66.3945 17.5667 60.7046 9.0639 52.2129L9.0656 52.2137C3.56262 46.7185 0.158203 39.1222 0.158203 30.7309C0.158203 13.9636 13.7507 0.371094 30.518 0.371094Z');
+  object-fit: cover;
+
 }
 
 .name {
