--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,17 +62,18 @@
 }
 
 .nav-item {
+  display: flex; /* Added */
+  align-items: center; /* Added */
   color: #1bc429;
   font-family: 'Nyxerin', sans-serif;
   font-size: 35px;
-  text-align: center;
   cursor: pointer;
   z-index: 2;
-  margin-left: 20px; /* Add space between items */
+  margin-left: 20px;
 }
 
 .nav-right .nav-item:first-child {
-  margin-left: 0; /* Remove left margin for the first item */
+  margin-left: 0;
 }
 
 .nav-icon {
@@ -155,6 +156,18 @@
 .nav-item a:hover {
   color: #00ff00;
 }
+
+.avatar {
+  margin-left: 10px;
+  width: 92px;
+  height: 86px;
+  flex-shrink: 0;
+  z-index: 0;
+  clip-path: path('M31.1528 0.958984C39.2236 0.958984 46.5589 4.1083 51.9968 9.24508L51.9967 9.24445C58.7406 15.6126 62.4716 15.2635 65.6556 11.8916L65.6558 11.8923C68.4232 8.96271 72.3443 7.13453 76.6924 7.13453C85.0759 7.13453 91.8721 13.9307 91.8721 22.3142C91.8721 28.92 87.6525 34.5404 81.7616 36.6268C75.6781 38.9844 72.7992 43.1017 76.2909 52.7688C77.3841 55.526 77.9849 58.532 77.9849 61.6783C77.9849 75.0353 67.1569 85.8633 53.7999 85.8633C42.4109 85.8633 32.8605 77.9909 30.2935 67.3909C29.3787 64.0061 28.6068 62.6172 25.4508 61.3785C15.9163 61.4629 15.6311 68.9477 16.734 71.3417C17.2167 72.289 17.4889 73.3615 17.4889 74.4976C17.4889 78.3414 14.3729 81.4574 10.5292 81.4574C6.68537 81.4574 3.56937 78.3414 3.56937 74.4976C3.56937 71.1485 5.93491 68.3519 9.08629 67.6876C11.8474 66.9871 18.2055 61.2961 9.69933 52.801L9.70016 52.8014C4.19729 47.3062 0.792969 39.71 0.792969 31.3188C0.792969 14.5515 14.3855 0.958984 31.1528 0.958984Z');
+  object-fit: cover;
+
+}
+
 
 /* Responsive adjustments for smaller screens */
 @media (max-width: 768px) {
